<resources>
    <string name="app_name">Diabetless</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome back, glad to see you again!</string>
    <string name="welcome1">Silahkan register akun jika belum punya, jika sudah langsung ke login</string>
    <string name="logout">logout</string>
    <string name="name">Name</string>
    <string name="add_story">add story</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">gambar kosong</string>
    <string name="remember_me">Remember me</string>
    <string name="login_google">Login with Google</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="singup_text">Don’t have an account?</string>
    <string name="signup_text_welcome">"Create a new account to continue. "</string>
    <string name="singup_text2">Already have an account?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="agree_policy"><![CDATA[I agree to the Terms & Condition and Privacy Policy]]></string>
    <string name="welcome">Welcome to Diabetless</string>
    <string name="desc">Empower Your Health with Diabetless: Your Ultimate Diabetless Management Companion</string>
    <string name="title_activity_main">Diabetless</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_meal">Meal Planner</string>
    <string name="title_health">Health</string>
    <string name="title_glycemic">Glycemic</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="menu">Menu</string>
    <string name="enter">Enter</string>
    <string name="reminder">Reminder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="notification_setting_button">Notification Settings</string>
    <string name="help_center_button">Help Center</string>
    <string name="about_us_button">About Us</string>
    <string name="logout_button">Logout</string>
    <string name="glycemic_index_camera">Glycemic Index Camera</string>
    <string name="title_meal_planner">Meal Planner</string>
    <string name="plan">Plan</string>
    <string name="see_more">See More</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="fullname">Full Name</string>
    <string name="change_password">Change Password</string>
    <string name="save_change">Save Changes</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="fullnameUlin">ulinnuha</string>
    <string name="articles">Articles</string>
    <string name="see_history">See history</string>
    <string name="update">Update</string>
    <string name="title_activity_body_composition">bodyCompositionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="save">Save</string>
    <string name="birthday">Birthday</string>
    <string name="birthdaynull">Birthday is not set!</string>
    <string name="edit_profile">Edit Profile</string>

</resources>