<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.bottomSheetMenu.BottomSheetMenuFragment"
    style="@style/BottomMenu">

    <LinearLayout
        android:id="@+id/profileButton"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_marginEnd="22dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:textAlignment="textStart"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notificationSettingButtonLayout"
        style="@style/ButtonStyle"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileButton"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_notifications_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_setting_button"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/helpCenterButtonLayout"
        style="@style/ButtonStyle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:insetRight="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationSettingButtonLayout"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_baseline_headset_mic_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"

            android:text="@string/help_center_button"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Repeat the same layout structure for the remaining buttons -->

    <LinearLayout
        android:id="@+id/aboutUsButtonLayout"
        style="@style/ButtonStyle"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpCenterButtonLayout"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_baseline_info_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/about_us_button"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoutButtonLayout"
        style="@style/ButtonStyle"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsButtonLayout"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_baseline_exit_to_app_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>